# git-quickprune

./: Cargo.toml  README.md
src/: main.rs
