[package]
name = "git-quickprune"
version = "0.1.0"
edition = "2021"
license = "Unlicense"
description = "A CLI tool to quickly prune squash-merged branches."

[[bin]]
name = "git-qp"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.79"
clap = { version = "4.4.13", features = ["derive"] }
tempfile = "3.9.0"
