[package]
name = "git-quickprune"
version = "0.1.2"
edition = "2021"
authors = ["Remo Senekowitsch"]
description = "A CLI tool to quickly prune squash-merged branches."
readme = "README.md"
repository = "https://github.com/senekor/git-quickprune"
license = "Unlicense"
categories = ["command-line-utilities"]

[[bin]]
name = "git-qp"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.79"
clap = { version = "4.4.13", features = ["derive"] }
tempfile = "3.9.0"
